--- a/yoonjisu/public/main.html
+++ b/yoonjisu/public/main.html
@@ -15,5 +15,7 @@
       1500s, when an unknown printer took a galley of type and scrambled it to
       make a type specimen book.
     </p>
+
+    <script src="main.js"></script>
   </body>
 </html>
